taa/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taa
  namespace: taa
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taa
  template:
    metadata:
      labels:
        app: taa
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: taa-php
        image: rockman88v/july-php:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "0.5"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
        - containerPort: 9000
      - name: taa-nginx
        image: rockman88v/july-nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: taa-svc
spec:
  type: NodePort
  selector:
    app: taa
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
